--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -330,6 +330,13 @@ abstract = {Leukocytes count in the blood smear images plays an important role i
   publisher={Hindawi}
 }
 
+@article{SSLvsRL-askanydifference,
+author = {askanydifference},
+title	 = {Difference Between Semi-Supervised and Reinforcement Learning (With Table)  – Ask Any Difference},
+year   = {2022},
+url 	 = {https://askanydifference.com/difference-between-semi-supervised-and-reinforcement-learning/}
+}
+
 @article{tran2019blood,
   title={Blood cell count using deep learning semantic segmentation},
   author={Tran, Thanh and Minh, Lam Binh and Lee, Suk-Hwan and Kwon, Ki-Ryong},
