Added timeline of segmentation algorithms!

--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -39,7 +39,6 @@ Artificial intelligence algorithms can be categorised into these four main types
     \input{tables/table4.tex}
 \end{itemize}
 
-
 \subsection{Machine Learning}
 Machine learning is a branch of artificial intelligence (AI) and computer science which focuses on the use of data and algorithms to imitate the way that humans learn, gradually improving its accuracy. \textsuperscript{\cite{ML-IBM}}
 
@@ -164,11 +163,18 @@ The convolutional layer is the first layer of a convolutional network. While con
 \vspace{0.2in}
 \hspace*{0.16in}
 
+\begin{figure}[h]
+\centering
+  \vspace{-0.1in}
+    \centerline{\includegraphics[width = 6in, height = 2.2in]{../images/timeline-of-segmentation-algorithms.jpg}}
+    \caption{Timeline of segmentation algorithms}
+\end{figure}
+
+\subsection{VGG}
+
 \subsection{U-Net}
 
 \subsection{SegNet}
-
-\subsection{VGG}
 
 \section{Image Processing Methods}
 \vspace{0.2in}
