--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -344,6 +344,13 @@ url 	 = {https://askanydifference.com/difference-between-semi-supervised-and-rei
   publisher={Preprints}
 }
 
+@article{VGG-Gaudenz_Boesch,
+author = {Gaudenz Boesch},
+title  = {VGG Very Deep Convolutional Networks (VGGNet) - What you need to know - viso.ai},
+year   = {2022},
+url    = {https://viso.ai/deep-learning/vgg-very-deep-convolutional-networks/}
+}
+
 @article{WBC-clevelandclinic,
 author = {clevelandclinic},
 title	 = {White Blood Cells: What Are They, Normal Ranges, Role \& Function},
