--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -330,6 +330,13 @@ abstract = {Leukocytes count in the blood smear images plays an important role i
   publisher={Hindawi}
 }
 
+@article{simonyan2014very,
+  title={Very deep convolutional networks for large-scale image recognition},
+  author={Simonyan, Karen and Zisserman, Andrew},
+  journal={arXiv preprint arXiv:1409.1556},
+  year={2014}
+}
+
 @article{SSLvsRL-askanydifference,
 author = {askanydifference},
 title	 = {Difference Between Semi-Supervised and Reinforcement Learning (With Table)  – Ask Any Difference},
