--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -164,15 +164,27 @@ The convolutional layer is the first layer of a convolutional network. While con
 \hspace*{0.16in}
 
 \begin{figure}[h]
-\centering
-  \vspace{-0.1in}
-    \centerline{\includegraphics[width = 6in, height = 2.2in]{../images/timeline-of-segmentation-algorithms.jpg}}
-    \caption{Timeline of segmentation algorithms}
-\end{figure}
+    \centering
+      \vspace{-0.1in}
+        \centerline{\includegraphics[width = 6in, height = 2.2in]{../images/timeline-of-segmentation-algorithms.jpg}}
+        \caption{Timeline of segmentation algorithms}
+    \end{figure}
+
 
 \subsection{VGG}
 
 \subsection{U-Net}
+U-Net is a CNN architecture built for biomedical image segmentation in 2015 \textsuperscript{\cite{ronneberger2015u}}. It consists of a contracting path (encoder) and an expansive path (decoder). The encoder follows the typical architecture of a convolutional network. It consists of the repeated application of two 3x3 convolutions (unpadded convolutions), each followed by a rectified linear unit (ReLU) and a 2x2 max pooling operation with stride 2 for downsampling. At each downsampling step we double the number of feature channels. Every step in the expansive path consists of an upsampling of the feature map followed by a 2x2 convolution (“up-convolution”) that halves the number of feature channels, a concatenation with the correspondingly cropped feature map from the contracting path, and two 3x3 convolutions, each followed by a ReLU. The cropping is necessary due to the loss of border pixels in every convolution. At the final layer a 1x1 convolution is used to map each 64-component feature vector to the desired number of classes. In total the network has 23 convolutional layers \textsuperscript{\cite{paperswithcode-U-Net}}.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=\columnwidth]{../images/u-net-architecture.png}
+\caption{U-Net Architecture. From \textsuperscript{\cite{ronneberger2015u}}}
+\label{fig:CNN}
+\end{figure}
+
+\subsubsection{Performance}
+The u-net is fast and precise model for segmentation of images. Up to now it has outperformed the prior best method (a sliding-window convolutional network) on the ISBI challenge for segmentation of neuronal structures in electron microscopic stacks. It has won the Grand Challenge for Computer-Automated Detection of Caries in Bitewing Radiography at ISBI 2015, and it has won the Cell Tracking Challenge at ISBI 2015 on the two most challenging transmitted light microscopy categories (Phase contrast and DIC microscopy) by a large margin.
 
 \subsection{SegNet}
 
