--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -270,7 +270,12 @@ doi = {10.1364/OSAC.388082},
 abstract = {Yeast fluorescence microscopic images are widely used to observe the living conditions and survival of yeast cells under experimental conditions. Accurate cell counting provides key quantitative feedback and plays key roles in biological research as well as in industrial and biomedical applications. Unfortunately, the commonly used manual counting method is time-intensive, poorly standardized, and non-reproducible. Here, we developed a two-stage framework using parallel modified U-Nets together with seed guided water-mesh algorithm for automatic segmentation and yeast cells counting. The proposed framework was tested with independent images, of which the ground truth of yeast cell number and locations was done by skilled technicians. Our method improved cell counting by reducing bias and demonstrated a 99.35\% consistent recall rate of experienced manual counting, and decreased the time required from 5 minutes on average to only 5 seconds for each image.},
 }
 
-@article{patil2014blood,
+@article{paperswithcode-U-Net,
+	author	={A Rectified Linear},
+	title	={U-Net Explained | Papers With Code},
+	year	={2022},
+	url	={https://paperswithcode.com/method/u-net}
+}@article{patil2014blood,
   title={BLOOD CELL ANALYSIS USING IMAGE SEGMENTATION AND COUNTING},
   author={Patil, Shivani and Nikam, Vidya and Patil, Rajeshwari},
   journal={International Journal},
@@ -296,6 +301,14 @@ year	 = {2022},
 url	   = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentID=34&ContentTypeID=160}
 }
 
+@inproceedings{ronneberger2015u,
+  title={U-net: Convolutional networks for biomedical image segmentation},
+  author={Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
+  booktitle={International Conference on Medical image computing and computer-assisted intervention},
+  pages={234--241},
+  year={2015},
+  organization={Springer}
+}
 @article{SUDHA2020639,
 title = {A novel approach for segmentation and counting of overlapped leukocytes in microscopic blood images},
 journal = {Biocybernetics and Biomedical Engineering},
