--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -172,7 +172,7 @@ In this section we are going to present some CNN architectures, CNN architecture
 \begin{figure}[h]
     \centering
       \vspace{-0.1in}
-        \centerline{\includegraphics[width = 6in, height = 2.2in]{../images/timeline-of-segmentation-algorithms.jpg}}
+        \centerline{\includegraphics[width = 6in, height = 2.2in]{../images/timeline-of-segmentation-algorithms.png}}
         \caption{Timeline of segmentation algorithms}
     \end{figure}
 
@@ -208,6 +208,12 @@ To sum it all up, VGG architecture consists of:
 The number 16 in the name VGG refers to the fact that it is 16 layers deep neural network (VGGnet). This means that VGG16 is a pretty extensive network and has a total of around 138 million parameters. Even according to modern standards, it is a huge network. However, VGGNet16 architecture’s simplicity is what makes the network more appealing. Just by looking at its architecture, it can be said that it is quite uniform.
 
 There are a few convolution layers followed by a pooling layer that reduces the height and the width. If we look at the number of filters that we can use, around 64 filters are available that we can double to about 128 and then to 256 filters. In the last layers, we can use 512 filters.
+
+\begin{figure}[h]
+\centering
+    \centerline{\includegraphics[width = 4.2in, height = 2.4in]{../images/VGG16-architecture.png}}
+    \caption{VGG16 architecture}
+\end{figure}
 
 \subsubsection{Performance of VGG Models}
 VGG16 highly surpasses the previous versions of models in the ILSVRC-2012 and ILSVRC-2013 competitions. Moreover, the VGG16 result is competing for the classification task winner (GoogLeNet with 6.7\% error) and considerably outperforms the ILSVRC-2013 winning submission Clarifai. It obtained 11.2\% with external training data and around 11.7\% without it. In terms of the single-net performance, the VGGNet-16 model achieves the best result with about 7.0\% test error, thereby surpassing a single GoogLeNet by around 0.9\%. \textsuperscript{\cite{VGG-Gaudenz_Boesch}}
