Added segnet article, citation and architecture image!

--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -60,6 +60,17 @@ url	   = {https://www.geeksforgeeks.org/supervised-unsupervised-learning/}
 	url	={https://www.webmd.com/cancer/lymphoma/acute-lymphoblastic-leukemia}
 }
 
+@article{badrinarayanan2017segnet,
+  title={Segnet: A deep convolutional encoder-decoder architecture for image segmentation},
+  author={Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={39},
+  number={12},
+  pages={2481--2495},
+  year={2017},
+  publisher={IEEE}
+}
+
 @ONLINE {BCCD_Dataset,
     author = "Shenggan",
     title  = "BCCD Dataset",
