Added DCT definition!

--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -245,3 +245,7 @@ SegNet is a semantic segmentation model designed in 2017. This core trainable se
 \section{Image Processing Methods}
 \vspace{0.2in}
 \hspace*{0.16in}
+
+\subsection{Watershed}
+
+\subsection{Discrete cosine transform}
