--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -249,3 +249,5 @@ SegNet is a semantic segmentation model designed in 2017. This core trainable se
 \subsection{Watershed}
 
 \subsection{Discrete cosine transform}
+A discrete cosine transform (DCT) expresses a finite sequence of data points in terms of a sum of cosine functions oscillating at different frequencies. The DCT, first proposed by Nasir Ahmed in 1972 \textsuperscript{\cite{ahmed1974discrete}}, is a widely used transformation technique in signal processing and data compression. It is used in most digital media, including digital images, digital video, digital audio, digital television, digital radio, and speech coding. DCTs are also important to numerous other applications in science and engineering, such as digital signal processing, telecommunication devices, reducing network bandwidth usage, and spectral methods for the numerical solution of partial differential equations.
+
