Added distance transform!

--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -305,4 +305,13 @@ This is the Circular Hough Transform algorithm:
     \item The maximum voted circle of Accumulator gives the circle. \textsuperscript{\cite{circle-hough-transform}}
 \end{enumerate}
 
+\subsection{Distance Transform}
+
+A Distance Transform, also known as distance map or distance field, is a derived representation of a digital image. The choice of the term depends on the point of view on the object in question: whether the initial image is transformed into another representation, or it is simply endowed with an additional map or field.
+
+Distance fields can also be signed, in the case where it is important to distinguish whether the point is inside or outside of the shape. \textsuperscript{\cite{frisken2000adaptively}}
+
+The map labels each pixel of the image with the distance to the nearest obstacle pixel. A most common type of obstacle pixel is a boundary pixel in a binary image.
+
+
 \newpage
