--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -129,6 +129,14 @@ year	 = {2022},
 url	   = {https://ml-cheatsheet.readthedocs.io/en/latest/gradient_descent.html}
 }
 
+@inproceedings{frisken2000adaptively,
+title 		= {Adaptively sampled distance fields: A general representation of shape for computer graphics},
+author 		= {Frisken, Sarah F and Perry, Ronald N and Rockwood, Alyn P and Jones, Thouis R},
+booktitle = {Proceedings of the 27th annual conference on Computer graphics and interactive techniques},
+pages 		= {249--254},
+year 			= {2000}
+}
+
 @ARTICLE{fukushima_Neocognitron,
   author={Fukushima, Kunihiko and Miyake, Sei and Ito, Takayuki},
   journal={IEEE Transactions on Systems, Man, and Cybernetics}, 
