--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -237,6 +237,15 @@ year	 = {2022},
 url		 = {https://www.geeksforgeeks.org/ml-linear-regression/}
 }
 
+@inproceedings{maple2003geometric,
+  title={Geometric design and space planning using the marching squares and marching cube algorithms},
+  author={Maple, Carsten},
+  booktitle={2003 international conference on geometric modeling and graphics, 2003. Proceedings},
+  pages={90--95},
+  year={2003},
+  organization={IEEE}
+}
+
 @article{mccarthy2004artificial,
   title={What is artificial intelligence},
   author={McCarthy, John},
