--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -480,23 +480,17 @@ This thesis is presented in four chapters:\\
 \begin{center}
     {\color{Black} \rule{\linewidth}{1.2mm} }\\
 \vspace{0.25in}
-    {\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter V : Implementation}}}}}
+    {\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter V : Methodology}}}}}
 \vspace{0.35in}\\
     {\color{Black} \rule{\linewidth}{1.2mm} }
 \end{center}
 \vspace*{\fill}
-\addcontentsline{toc}{chapter}{\color{Black}{Chapter V : Implementation}}
+\addcontentsline{toc}{chapter}{\color{Black}{Chapter V : Methodology}}
 \setcounter{section}{0}
 
 \newpage
 
-\section{Introduction}
-\vspace{0.2in}
-\hspace*{0.16in}
-
-\section{Conclusion}
-\vspace{0.1in}
-\hspace*{0.16in}
+\input{chap5.tex}
 
 \newpage
 
