added chapter 5 introduction!

--- a/PFE/latex/chap5.tex
+++ b/PFE/latex/chap5.tex
@@ -1,7 +1,8 @@
 \section{Introduction}
 \vspace{0.2in}
 \hspace*{0.16in}
-\lipsum[3-3]
+In our case study, and from multiple articles, we can see that U-Net and Segnet models are dominating the field of cell segmentation.
+In this chapter, we test out both U-Net and Segnet models, and analyse the results by comparing the two architectures.
 
 \section{Models}
 \vspace{0.2in}
