added introduction to the segnet architecture

--- a/PFE/latex/chap5.tex
+++ b/PFE/latex/chap5.tex
@@ -9,10 +9,10 @@ In this chapter, we test out both U-Net and Segnet models, and analyse the resul
 \hspace*{0.16in}
 \lipsum[3-3]
 
-\subsection{Dual Output U-Net}
-\lipsum[3-6]
-
-\subsection{Segnet}
-\lipsum[3-6]
+\subsection{U-Net}
 \subsubsection{Introduction}
 \lipsum[2-2]
+
+\subsection{Segnet}
+\subsubsection{Introduction}
+SegNet is a semantic segmentation model. This core trainable segmentation architecture consists of an encoder network, a corresponding decoder network followed by a pixel-wise classification layer. The architecture of the encoder network is topologically identical to the 13 convolutional layers in the VGG16 network. \textsuperscript{\cite{badrinarayanan2017segnet}}
