--- a/PFE/latex/chap5.tex
+++ b/PFE/latex/chap5.tex
@@ -3,6 +3,7 @@
 \hspace*{0.16in}
 In our case study, and from multiple articles, we can see that U-Net and Segnet models are dominating the field of cell segmentation.
 In this chapter, we test out both U-Net and Segnet models, and analyse the results by comparing the two architectures.
+We will also explore different machine learning algorithms for both preprocessing and postprocessing.
 
 \section{Models}
 \vspace{0.2in}
