--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -4,6 +4,7 @@
 \renewcommand{\baselinestretch}{1.5}
 \usepackage{float}
 \usepackage{lipsum}
+\usepackage{multirow}
 \usepackage{graphicx}
 \usepackage{subcaption}
 \usepackage[table,xcdraw,dvipsnames]{xcolor}
