--- a/PFE/latex/chap5.tex
+++ b/PFE/latex/chap5.tex
@@ -1,8 +1,9 @@
 \section{Introduction}
 \vspace{0.2in}
 \hspace*{0.16in}
-In our case study, and from multiple articles, we can see that U-Net and Segnet models are dominating the field of cell segmentation.
-In this chapter, we test out both U-Net and Segnet models, and analyse the results by comparing the two architectures.
+As part of our research, we have treated the case of segmenting and counting Red, White blood cells and platelets which also known as CBC (Complete Blood Count), we are using the ALL-IDB\textsuperscript{\cite{pm77-2n23-20}} Dataset to train and evaluate our models.
+In our case study, and from multiple articles, we can see that U-Net and Segnet models are dominating the field of cell segmentation and Medical Computer vision in general.
+In this chapter, we test out both U-Net and Segnet models, and analyse the results by comparing results of the two architectures.
 We will also explore different machine learning algorithms for both preprocessing and postprocessing.
 
 \section{Our approach}
